# rpi_utils

./: .pylintrc  README.md  main.py  pyproject.toml
.github/workflows/: pylint.yml
rpi_utils/: deluge.py  display.py
