[tool.poetry]
name = "rpi_utils"
version = "0.1.0"
description = ""
authors = ["Tamas Sagi <sagi.tamas93@gmail.com>"]

[tool.poetry.dependencies]
"luma.core" = "^2.3.1"
"luma.oled" = "^3.8.1"
PlexAPI = "^4.10.0"
deluge-client = "^1.9.0"
psutil = "^5.9.0"
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
